# googol_translate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
frontend/: index.html  style.css  style.css.map
frontend/styles/: style.css.map  style.scss
src/: error.rs  main.rs  response.rs  translation.rs
