[package]
name = "googol_translate"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.11.1"
openai-api-rs = "4.0.8"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = "0.13.0"
thiserror = "1.0.59"
tokio = { version = "1", features = ["macros"] }

# Idk why but the reqwest crate doesn't work with lambda, but it will if you use openssl
# https://stackoverflow.com/questions/76231924/cargo-lambda-build-does-not-find-openssl-development-headers
# reqwest = "0.12.4"
# openssl = { version = "0.10.64", features = ["vendored"] }
