[package]
name = "googol_translate"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.11.1"
llm = "0.1.1"
openai-api-rs = "4.0.8"
reqwest = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = "0.13.0"

tokio = { version = "1", features = ["macros"] }

